--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <i class="fa fa-bars"></i>
                 </a>
             </nav>
-            <img class="me" src="/images/me1.png" >
+            <img class="me" src="me1.png" >
             <div class="header-text">
                 <p>Web Designer</p>
                 <h1>Hi, i m <span>Kuldeep Singh </span><br>Rathore from Jaipur</h1>
@@ -40,7 +40,7 @@
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
-                    <img src="images/pngwing.com (1).png" alt="">
+                    <img src="pngwing.com (1).png" alt="">
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About me</h1>
@@ -117,7 +117,7 @@
                         <a href=""><i class="fa-brands fa-twitter-square"></i></a>
                         <a href=""><i class="fa-brands fa-linkedin"></i></a>
                     </div>
-                    <a href="images/Kuldeepoffical.pdf" Download class="btn btn2 ">Download CV</a>
+                    <a href="Kuldeepoffical.pdf" Download class="btn btn2 ">Download CV</a>
                 </div>
                 <div class="contact-right">
                     <form>
