--- a/index.html
+++ b/index.html
@@ -62,11 +62,12 @@
                     </div>
                     <div class="tab-contents " id="skills">
                         <ul>
-                            <li><i class="fa-brands fa-html5"></i><span>HTML</span><br></li>
-                            <li><i class="fa-brands fa-css3-alt"></i><span>CSS</span><br></li>
-                            <li><i class="fa-brands fa-js"></i><span>JavaScript</span><br></li>
-                            <li><i class="fa-solid fa-camera-retro"></i><span>PhotoShope</span><br></li>
-                            <li><i class="fa-solid fa-pen-to-square"></i><span>Corel</span><br></li>
+                          <li><i class="fa-brands fa-html5"></i><span>HTML</span>  <progress value="85" max="100" >85%</progress><br></li> 
+                            <li><i class="fa-brands fa-css3-alt"></i><span>CSS</span>  <progress  value="70" max="100">70%</progress><br></li>
+                            <li><i class="fa-brands fa-js"></i><span>JavaScript</span>  <progress value="50" max="100" >50%</progress><br></li>
+                            <li><i class="fa-brands fa-js"></i><span>Bootstrap</span>  <progress value="30" max="100" >30%</progress><br></li>
+                            <li><i class="fa-solid fa-camera-retro"></i><span>PhotoShope</span>  <progress value="30" max="100">30%</progress><br></li>
+                            <li><i class="fa-solid fa-pen-to-square"></i><span>Corel</span>  <progress value="45" max="100">45%</progress><br></li>
                         </ul>
                     </div>
                     <div class="tab-contents " id="education">
