--- a/index.html
+++ b/index.html
@@ -72,10 +72,12 @@
                     </div>
                     <div class="tab-contents " id="education">
                         <ul>
-                            <li><span>2016</span><br>10th from RBSE Ajmer</li>
-                            <li><span>2018</span><br>12tn from RBSE Ajmer</li>
-                            <li><span>2023</span><br>BCA from MDSU Ajmer</li>
-                            <li><span>2023</span><br>Web Designing Training Samayak Jaipur.</li>
+                            <li><i class="fa-brands fa-html5"></i><span>HTML</span>  <progress value="85" max="100" >85%</progress><br></li> 
+                            <li><i class="fa-brands fa-css3-alt"></i><span>CSS</span>  <progress  value="70" max="100">70%</progress><br></li>
+                            <li><i class="fa-brands fa-js"></i><span>JavaScript</span>  <progress value="50" max="100" >50%</progress><br></li>
+                            <li><i class="fa-brands fa-js"></i><span>Bootstrap</span>  <progress value="30" max="100" >30%</progress><br></li>
+                            <li><i class="fa-solid fa-camera-retro"></i><span>PhotoShope</span>  <progress value="30" max="100">30%</progress><br></li>
+                            <li><i class="fa-solid fa-pen-to-square"></i><span>Corel</span>  <progress value="45" max="100">45%</progress><br></li>
                         </ul>
                     </div>
                 </div>
